--- a/main-server/templates/index.html
+++ b/main-server/templates/index.html
@@ -51,7 +51,9 @@
                 <h1 class="h1-responsive font-weight-bold">Voting Vader</h1>
                 <h3 class="h3-responsive">Millennium Falcon</h3>
                 <h5 class="h5-responsive">IIT Jodhpur</h5>
-                <a href="/votes"><button type="button" class="btn btn-primary">Votes</button></a>
+                <a href="/votes">
+                    <button type="button" class="btn btn-primary">Votes</button>
+                </a>
             </div>
         </div>
         <div class="carousel-item">
@@ -60,7 +62,9 @@
                 <h1 class="h1-responsive font-weight-bold">Voting Vader</h1>
                 <h3 class="h3-responsive">Millennium Falcon</h3>
                 <h5 class="h5-responsive">IIT Jodhpur</h5>
-                <a href="/votes"><button type="button" class="btn btn-primary">Votes</button></a>
+                <a href="/votes">
+                    <button type="button" class="btn btn-primary">Votes</button>
+                </a>
             </div>
         </div>
     </div>
@@ -204,61 +208,45 @@
             </div>
         </section>
         <hr class="mb-5">
-
         <section class="mt-5 wow fadeIn">
-            <div class="row">
-                <div class="col-md-5 mb-4">
-                    <h3 class="h3 mb-3">Motivation: Secure IOT & Blockchain based EVMs </h3>
-                
-                        The solution we propose is while keeping in mind feasibilty of implementation. Since it's difficult to change the voting process in general given the demographics and diversity of India especially in terms of geography and literacy levels. It is a hurdle to educate people on any drastic change in the voting mechanism.
-                        <br>
-                        We intend to make the voting process more transparent and fairer at the base level. 
-                        <br>
-                        Using Azure Blockchain service as the backend to ensure that data is secure, we have developed an IOT based EVM.
-                        Using raspberry Pi as the brains of the system. The EVM uses technologies such as RFiD to ensure security at the actual physical level.                                            
-                        <br>
-                        *We later intend to replace Raspberry Pi with AzureSphere in order to increase the security even further.                        
-                        <br>
-                    <a target="_blank" href="https://github.com/anshulahuja98/CFD-19-IITJ/" class="btn btn-grey btn-md">Code
-                        <i class="fa fa-github ml-1"></i>
-                    </a>
-                    <a target="_blank" href="https://www.youtube.com/embed/_PcUHHltb04" class="btn btn-grey btn-md">Live
-                        demo
-                        <i class="fa fa-youtube ml-1"></i>
-                    </a>
+            <div class="row d-flex flex-wrap align-items-center">
+                <div class="col-md-6 mb-4 text-justify">
+                    <h5 class="h5-responsive mb-3">Motivation</h5>
+                    <h3 class="h3-responsive mb-3 font-weight-bold">Secure IoT & Blockchain based EVMs</h3>
+                    Our proposed solution is based on the feasibility of implementation. It is very much difficult to
+                    change the whole voting process given the Indian demographics and the diversity of Indian society
+                    especially in terms of geography and literacy levels. It is a very difficult hurdle to educate
+                    people about any change in the voting process.<br><br>
+                    We intend to make the voting process much more transparent and fairer at the base level.<br><br>
+                    Using <b>Azure Blockchain service</b> as the backend to ensure that data is secure, we have
+                    developed an
+                    IoT based EVM using <b>Raspberry Pi</b> as the system brain. The EVM uses technologies such as <b>RFID</b>
+                    to
+                    ensure security at the actual physical level.<br><br>
+                    * We later intend to replace <b>Raspberry Pi</b> with <b>AzureSphere</b> to increase the security
+                    even
+                    further.
                 </div>
-                <div class="col-md-7 mb-4">
-                    <img src="img/block2.png" style="margin-left: 5rem; height: 30rem; width: 32rem;   "
-                         class="img-fluid z-depth-1-half" alt="">
+                <div class="col-md-6 align-items-center">
+                    <img src="img/block2.png" style="height: auto; width: 100%;" class="img-fluid z-depth-1-half">
                 </div>
             </div>
         </section>
-
+        <hr class="mb-5">
         <section class="mt-5 wow fadeIn">
-            <div class="row">
-                <div class="col-md-6 mb-4">
-                    <h3 class="h3 mb-3">Platform Agnostic backend</h3>
-                    
-                        Using Azure Blockchain Workbench based on Azure Blockchain service, we have exposed REST API endpoints to transact on the blockchain. This will ensure the ability to make it versatile to cope with diverse types of voting platforms be it web or app.
-                        <br>
-                        Eventually we have ended up speeding up the vote counting process while maintaining transparency at every level voted through our EVMs.                       
-                        We plan to later integrate our solution with present paper trail solutions.
-
-                        Currently we have maintained the highest level of security possible in our API calls from raspberry Pi by using a token and certificate based authentication for API calls.
-                        <br>
-
-                    <h3 class="h3 mb-3">Our solution</h3>
-                    
-                        Using Azure Blockchain Workbench based on Azure Blockchain service, we have exposed REST API endpoints to transact on the blockchain. This will ensure the ability to make it versatile to cope with diverse types of voting platforms be it web or app.
-                        <br>
-                        Eventually we have ended up speeding up the vote counting process while maintaining transparency at every level voted through our EVMs.                       
-                        We plan to later integrate our solution with present paper trail solutions.
-                        Currently we have maintained the highest level of security possible in our API calls from raspberry Pi by using a token and certificate based authentication for API calls.
-
+            <div class="row d-flex flex-wrap align-items-center">
+                <div class="col-md-6 mb-4 text-justify">
+                    <h3 class="h3-responsive mb-3 font-weight-bold">Platform Agnostic Back-End</h3>
+                    Using <b>Azure Blockchain Workbench</b> based on <b>Azure Blockchain service</b>, we have exposed <b>REST API</b>
+                    endpoints to transact on the blockchain. This will ensure the ability to make it versatile to cope
+                    with diverse types of voting platforms be it web or app.<br><br>
+                    Eventually, we have ended up speeding up the vote-counting process while maintaining transparency at
+                    every level voted through our EVMs. We plan to later integrate our solution with present paper trail
+                    solutions. Currently, we have maintained the highest level of security possible in our API calls
+                    from <b>Raspberry Pi</b> by using a token and certificate-based authentication for API calls.
                 </div>
                 <div class="col-md-6 mb-4">
-                    <img src="img/EVM-min.jpeg" style="margin-left: 5rem; " class="img-fluid z-depth-1-half"
-                         alt="">
+                    <img src="img/EVM-min.jpeg" style="height: auto; width: 70%;" class="img-fluid z-depth-1-half">
                 </div>
             </div>
         </section>
