--- a/main-server/templates/index.html
+++ b/main-server/templates/index.html
@@ -85,7 +85,7 @@
                     <img src="img/team_1.png" class="img-fluid z-depth-1-half" alt="">
                 </div>
                 <div class="col-md-6 mb-4">
-                    <h3 class="h3 mb-3">Millennium Falcon</h3>
+                    <h3 class="h3-responsive font-weight-bold mb-3">Millennium Falcon</h3>
                     <p>Indian Institute of Technology, Jodhpur</p>
                     <hr>
                     <p class="font-weight-bold">Team Members</p>
@@ -105,117 +105,6 @@
             </div>
         </section>
         <hr class="my-5">
-        <section>
-            <h2 class="my-5 h2 text-center">Technologies Used</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <img src="/img/microsoft-azure.png" alt="" class="z-depth-0 img-fluid">
-                </div>
-                <div class="col-md-4">
-                    <img src="/img/cosmos-db.png" alt="" class="z-depth-0 img-fluid">
-                </div>
-                <div class="col-md-4">
-                    <img src="/img/edge.png" alt="" class="z-depth-0 img-fluid">
-                    <br><br><br>
-                </div>
-                <div class="col-md-4">
-                    <img src="/img/rfid.png" style="height: 14rem; width: 14rem; margin-left: 3rem" alt=""
-                         class="z-depth-0 img-fluid">
-                </div>
-                <div class="col-md-4">
-                    <img src="/img/pi.png" alt="" class="z-depth-0 img-fluid">
-                </div>
-                <div class="col-md-4">
-                    <img src="/img/block.png" style="height: 14rem; width: 14rem; margin-left: 3rem" alt=""
-                         class="z-depth-0 img-fluid">
-                </div>
-            </div>
-            <br>
-            <div class="row features-small mb-5 mt-3 wow fadeIn">
-                <div class="col-md-4">
-                    <div class="row">
-                        <div class="col-2">
-                            <i class="fa fa-check-circle fa-2x indigo-text"></i>
-                        </div>
-                        <div class="col-10">
-                            <h6 class="feature-title" style="font-weight: 600">Microsoft Azure</h6>
-                            <p class="black-text">As Cloud hosting platform, it hosts an Ubuntu VM which handles all the
-                                data for the backend of the project and also to serve the frontend of this current
-                                website.
-                            </p>
-                            <div style="height:15px"></div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-2">
-                            <i class="fa fa-check-circle fa-2x indigo-text"></i>
-                        </div>
-                        <div class="col-10">
-                            <h6 class="feature-title" style="font-weight: 600">Azure Blockchain Service</h6>
-                            <p class="black-text"> A fully managed ledger service that allows to grow and operate
-                                blockchain networks at scale in Azure, used to deploy the election network consortium
-                                and devlop the smart contracts used.
-                            </p>
-                            <div style="height:15px"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mt-2">
-                    <div class="row">
-                        <div class="col-2">
-                            <i class="fa fa-check-circle fa-2x indigo-text"></i>
-                        </div>
-                        <div class="col-10">
-                            <h6 class="feature-title" style="font-weight: 600">Azure Cosmos DB</h6>
-                            <p class="black-text">Used the extensively scalable Azure Cosmos DB(Azure Table) for storing other data related to the project.
-                            </p>
-                            <div style="height:15px"></div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-2">
-                            <i class="fa fa-check-circle fa-2x indigo-text"></i>
-                        </div>
-                        <div class="col-10">
-                            <h6 class="feature-title" style="font-weight: 600">Raspberry Pi</h6>
-                            <p class="black-text">It acts as an EVM to record votes after verification. </p>
-                            <div style="height:15px"></div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-2">
-                            <i class="fa fa-check-circle fa-2x indigo-text"></i>
-                        </div>
-                        <div class="col-10">
-                            <h6 class="feature-title" style="font-weight: 600">RFID</h6>
-                            <p class="black-text">Used to authenticate the EVM and add an extra layer of security.</p>
-                            <div style="height:15px"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mt-2">
-                    <div class="row">
-                        <div class="col-2">
-                            <i class="fa fa-check-circle fa-2x indigo-text"></i>
-                        </div>
-                        <div class="col-10">
-                            <h6 class="feature-title" style="font-weight: 600">Azure Blockchain Workbench</h6>
-                            <p class="black-text">To configure and deploy the consortium network and configure using it to expose REST APIs to interact with the contracts to provide a platform agnostic service. </p>
-                            <div style="height:15px"></div>
-                        </div>
-                        <!-- <div class="col-2">
-                            <i class="fa fa-check-circle fa-2x indigo-text"></i>
-                        </div>
-                        <div class="col-10">
-                            <h6 class="feature-title" style="font-weight: 600">Python/Flask Extensions</h6>
-                            <p class="black-text">Electronic valve, 240V Relay, Speakers</p>
-                            <div style="height:15px"></div>
-                        </div> -->
-                    </div>
-                </div>
-            </div>
-        </section>
-        <hr class="mb-5">
         <section class="mt-5 wow fadeIn">
             <div class="row d-flex flex-wrap align-items-center">
                 <div class="col-md-6 mb-4 text-justify">
@@ -257,6 +146,113 @@
                     <img src="img/EVM-min.jpeg" style="height: auto; width: 70%;" class="img-fluid z-depth-1-half">
                 </div>
             </div>
+        </section>
+        <hr class="mb-5">
+        <section>
+            <h2 class="my-5 h2 text-center">Technologies Used</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/img/microsoft-azure.png" alt="" class="z-depth-0 img-fluid">
+                </div>
+                <div class="col-md-4">
+                    <img src="/img/cosmos-db.png" alt="" class="z-depth-0 img-fluid">
+                </div>
+                <div class="col-md-4">
+                    <img src="/img/edge.png" alt="" class="z-depth-0 img-fluid">
+                    <br><br><br>
+                </div>
+                <div class="col-md-4">
+                    <img src="/img/rfid.png" style="height: 14rem; width: 14rem; margin-left: 3rem" alt=""
+                         class="z-depth-0 img-fluid">
+                </div>
+                <div class="col-md-4">
+                    <img src="/img/pi.png" alt="" class="z-depth-0 img-fluid">
+                </div>
+                <div class="col-md-4">
+                    <img src="/img/block.png" style="height: 14rem; width: 14rem; margin-left: 3rem" alt=""
+                         class="z-depth-0 img-fluid">
+                </div>
+            </div>
+            <br>
+            <div class="row features-small mb-5 mt-3 wow fadeIn">
+                <div class="col-md-4">
+                    <div class="row">
+                        <div class="col-2">
+                            <i class="fa fa-check-circle fa-2x indigo-text"></i>
+                        </div>
+                        <div class="col-10">
+                            <h6 class="feature-title" style="font-weight: 600">Microsoft Azure</h6>
+                            <p class="black-text text-justify">As Cloud hosting platform, it hosts an Ubuntu VM which handles all the
+                                data for the backend of the project and also to serve the frontend of this current
+                                website.
+                            </p>
+                            <div style="height:15px"></div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-2">
+                            <i class="fa fa-check-circle fa-2x indigo-text"></i>
+                        </div>
+                        <div class="col-10">
+                            <h6 class="feature-title" style="font-weight: 600">Azure Blockchain Service</h6>
+                            <p class="black-text text-justify"> A fully managed ledger service that allows to grow and operate
+                                blockchain networks at scale in Azure, used to deploy the election network consortium
+                                and devlop the smart contracts used.
+                            </p>
+                            <div style="height:15px"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mt-2">
+                    <div class="row">
+                        <div class="col-2">
+                            <i class="fa fa-check-circle fa-2x indigo-text"></i>
+                        </div>
+                        <div class="col-10">
+                            <h6 class="feature-title" style="font-weight: 600">Azure Cosmos DB</h6>
+                            <p class="black-text text-justify">Used the extensively scalable Azure Cosmos DB(Azure Table) for storing other data related to the project.
+                            </p>
+                            <div style="height:15px"></div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-2">
+                            <i class="fa fa-check-circle fa-2x indigo-text"></i>
+                        </div>
+                        <div class="col-10">
+                            <h6 class="feature-title" style="font-weight: 600">Raspberry Pi</h6>
+                            <p class="black-text text-justify">It acts as an EVM to record votes after verification. </p>
+                            <div style="height:15px"></div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-2">
+                            <i class="fa fa-check-circle fa-2x indigo-text"></i>
+                        </div>
+                        <div class="col-10">
+                            <h6 class="feature-title" style="font-weight: 600">RFID</h6>
+                            <p class="black-text text-justify">Used to authenticate the EVM and add an extra layer of security.</p>
+                            <div style="height:15px"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mt-2">
+                    <div class="row">
+                        <div class="col-2">
+                            <i class="fa fa-check-circle fa-2x indigo-text"></i>
+                        </div>
+                        <div class="col-10">
+                            <h6 class="feature-title" style="font-weight: 600">Azure Blockchain Workbench</h6>
+                            <p class="black-text text-justify">To configure and deploy the consortium network and configure using it to expose REST APIs to interact with the contracts to provide a platform agnostic service. </p>
+                            <div style="height:15px"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <hr class="mb-5">
+        <section class="text-center">
+            <h3 class="h3-responsive mb-5 font-weight-bold">Workflows</h3>
         </section>
     </div>
 </main>
