--- a/main-server/templates/index.html
+++ b/main-server/templates/index.html
@@ -85,7 +85,7 @@
                     <img src="img/team_1.png" class="img-fluid z-depth-1-half" alt="">
                 </div>
                 <div class="col-md-6 mb-4">
-                    <h3 class="h3-responsive font-weight-bold mb-3">Millennium Falcon</h3>
+                    <h3 class="h3 mb-3">Millennium Falcon</h3>
                     <p>Indian Institute of Technology, Jodhpur</p>
                     <hr>
                     <p class="font-weight-bold">Team Members</p>
@@ -97,7 +97,7 @@
                     <a target="_blank" href="https://github.com/anshulahuja98/CFD-19-IITJ/" class="btn btn-grey btn-md">Code
                         <i class="fa fa-github ml-1"></i>
                     </a>
-                    <a target="_blank" href="https://www.youtube.com/embed/_PcUHHltb04" class="btn btn-grey btn-md">Live
+                    <a target="_blank" href="https://youtu.be/oYs3sAa2E6w" class="btn btn-grey btn-md">Live
                         demo
                         <i class="fa fa-youtube ml-1"></i>
                     </a>
@@ -105,67 +105,6 @@
             </div>
         </section>
         <hr class="my-5">
-        <section class="mt-5 wow fadeIn">
-            <div class="row d-flex flex-wrap align-items-center">
-                <div class="col-md-6 mb-4 text-justify">
-                    <h5 class="h5-responsive mb-3">Motivation</h5>
-                    <h3 class="h3-responsive mb-3 font-weight-bold">Secure IoT & Blockchain based EVMs</h3>
-                    Our proposed solution is based on the feasibility of implementation. It is very much difficult to
-                    change the whole voting process given the Indian demographics and the diversity of Indian society
-                    especially in terms of geography and literacy levels. It is a very difficult hurdle to educate
-                    people about any change in the voting process.<br><br>
-                    We intend to make the voting process much more transparent and fairer at the base level.<br><br>
-                    Using <b>Azure Blockchain service</b> as the backend to ensure that data is secure, we have
-                    developed an
-                    IoT based EVM using <b>Raspberry Pi</b> as the system brain. The EVM uses technologies such as <b>RFID</b>
-                    to
-                    ensure security at the actual physical level.<br><br>
-                    * We later intend to replace <b>Raspberry Pi</b> with <b>AzureSphere</b> to increase the security
-                    even
-                    further.
-                </div>
-                <div class="col-md-6 align-items-center">
-                    <img src="img/block2.png" style="height: auto; width: 100%;" class="img-fluid z-depth-1-half">
-                </div>
-            </div>
-        </section>
-        <hr class="mb-5">
-        <section class="mt-5 wow fadeIn">
-            <div class="row d-flex flex-wrap align-items-center">
-                <div class="col-md-6 mb-4 text-justify">
-                    <h3 class="h3-responsive mb-3 font-weight-bold">Platform Agnostic Back-End</h3>
-                    Using <b>Azure Blockchain Workbench</b> based on <b>Azure Blockchain service</b>, we have exposed <b>REST API</b>
-                    endpoints to transact on the blockchain. This will ensure the ability to make it versatile to cope
-                    with diverse types of voting platforms be it web or app.<br><br>
-                    Eventually, we have ended up speeding up the vote-counting process while maintaining transparency at
-                    every level voted through our EVMs. We plan to later integrate our solution with present paper trail
-                    solutions. Currently, we have maintained the highest level of security possible in our API calls
-                    from <b>Raspberry Pi</b> by using a token and certificate-based authentication for API calls.
-                </div>
-                <div class="col-md-6 mb-4">
-                    <img src="img/EVM-min.jpeg" style="height: auto; width: 70%;" class="img-fluid z-depth-1-half">
-                </div>
-            </div>
-        </section>
-        <hr class="mb-5">
-        <section>
-            <div class="row d-flex flex-wrap align-items-center">
-                <div class="col-12 mb-5 text-justify">
-                    <h3 class="h3-responsive mb-5 font-weight-bold text-center">Workflows</h3>
-                    Using <b>Azure Blockchain Workbench</b> based on <b>Azure Blockchain service</b>, we have exposed <b>REST API</b>
-                    endpoints to transact on the blockchain. This will ensure the ability to make it versatile to cope
-                    with diverse types of voting platforms be it web or app.<br><br>
-                    Eventually, we have ended up speeding up the vote-counting process while maintaining transparency at
-                    every level voted through our EVMs. We plan to later integrate our solution with present paper trail
-                    solutions. Currently, we have maintained the highest level of security possible in our API calls
-                    from <b>Raspberry Pi</b> by using a token and certificate-based authentication for API calls.
-                </div>
-                <div class="col-12 mb-4">
-                    <img src="img/arch-diag.png" style="height: auto; width: 100%;" class="img-fluid z-depth-1-half">
-                </div>
-            </div>
-        </section>
-        <hr class="mb-5">
         <section>
             <h2 class="my-5 h2 text-center">Technologies Used</h2>
             <div class="row">
@@ -200,7 +139,7 @@
                         </div>
                         <div class="col-10">
                             <h6 class="feature-title" style="font-weight: 600">Microsoft Azure</h6>
-                            <p class="black-text text-justify">As Cloud hosting platform, it hosts an Ubuntu VM which handles all the
+                            <p class="black-text">As Cloud hosting platform, it hosts an Ubuntu VM which handles all the
                                 data for the backend of the project and also to serve the frontend of this current
                                 website.
                             </p>
@@ -213,7 +152,7 @@
                         </div>
                         <div class="col-10">
                             <h6 class="feature-title" style="font-weight: 600">Azure Blockchain Service</h6>
-                            <p class="black-text text-justify"> A fully managed ledger service that allows to grow and operate
+                            <p class="black-text"> A fully managed ledger service that allows to grow and operate
                                 blockchain networks at scale in Azure, used to deploy the election network consortium
                                 and devlop the smart contracts used.
                             </p>
@@ -228,7 +167,7 @@
                         </div>
                         <div class="col-10">
                             <h6 class="feature-title" style="font-weight: 600">Azure Cosmos DB</h6>
-                            <p class="black-text text-justify">Used the extensively scalable Azure Cosmos DB(Azure Table) for storing other data related to the project.
+                            <p class="black-text">Used the extensively scalable Azure Cosmos DB(Azure Table) for storing other data related to the project.
                             </p>
                             <div style="height:15px"></div>
                         </div>
@@ -239,7 +178,7 @@
                         </div>
                         <div class="col-10">
                             <h6 class="feature-title" style="font-weight: 600">Raspberry Pi</h6>
-                            <p class="black-text text-justify">It acts as an EVM to record votes after verification. </p>
+                            <p class="black-text">It acts as an EVM to record votes after verification. </p>
                             <div style="height:15px"></div>
                         </div>
                     </div>
@@ -249,7 +188,7 @@
                         </div>
                         <div class="col-10">
                             <h6 class="feature-title" style="font-weight: 600">RFID</h6>
-                            <p class="black-text text-justify">Used to authenticate the EVM and add an extra layer of security.</p>
+                            <p class="black-text">Used to authenticate the EVM and add an extra layer of security.</p>
                             <div style="height:15px"></div>
                         </div>
                     </div>
@@ -261,10 +200,61 @@
                         </div>
                         <div class="col-10">
                             <h6 class="feature-title" style="font-weight: 600">Azure Blockchain Workbench</h6>
-                            <p class="black-text text-justify">To configure and deploy the consortium network and configure using it to expose REST APIs to interact with the contracts to provide a platform agnostic service. </p>
+                            <p class="black-text">To configure and deploy the consortium network and configure using it to expose REST APIs to interact with the contracts to provide a platform agnostic service. </p>
                             <div style="height:15px"></div>
                         </div>
+                        <!-- <div class="col-2">
+                            <i class="fa fa-check-circle fa-2x indigo-text"></i>
+                        </div>
+                        <div class="col-10">
+                            <h6 class="feature-title" style="font-weight: 600">Python/Flask Extensions</h6>
+                            <p class="black-text">Electronic valve, 240V Relay, Speakers</p>
+                            <div style="height:15px"></div>
+                        </div> -->
                     </div>
+                </div>
+            </div>
+        </section>
+        <hr class="mb-5">
+        <section class="mt-5 wow fadeIn">
+            <div class="row d-flex flex-wrap align-items-center">
+                <div class="col-md-6 mb-4 text-justify">
+                    <h5 class="h5-responsive mb-3">Motivation</h5>
+                    <h3 class="h3-responsive mb-3 font-weight-bold">Secure IoT & Blockchain based EVMs</h3>
+                    Our proposed solution is based on the feasibility of implementation. It is very difficult to
+                    change the whole voting process given the Indian demographics and the diversity of Indian society
+                    especially in terms of geography and literacy levels. It is a very difficult hurdle to educate
+                    people about any change in the voting process.<br><br>
+                    We intend to make the voting process much more transparent and fairer at the base level.<br><br>
+                    Using <b>Azure Blockchain service</b> as the backend to ensure that data is secure, we have
+                    developed an
+                    IoT based EVM using <b>Raspberry Pi</b> as the brains of the system. The EVM uses technologies such as <b>RFID</b>
+                    to
+                    ensure security at the actual physical level.<br><br>
+                    * We later intend to replace <b>Raspberry Pi</b> with <b>AzureSphere</b> to increase the security
+                    even
+                    further.
+                </div>
+                <div class="col-md-6 align-items-center">
+                    <img src="img/block2.png" style="height: auto; width: 100%;" class="img-fluid z-depth-1-half">
+                </div>
+            </div>
+        </section>
+        <hr class="mb-5">
+        <section class="mt-5 wow fadeIn">
+            <div class="row d-flex flex-wrap align-items-center">
+                <div class="col-md-6 mb-4 text-justify">
+                    <h3 class="h3-responsive mb-3 font-weight-bold">Platform Agnostic Back-End</h3>
+                    Using <b>Azure Blockchain Workbench</b> based on <b>Azure Blockchain service</b>, we have securely exposed <b>REST API</b>
+                    endpoints to transact on the blockchain. This will ensure the ability to make it versatile to cope
+                    with diverse types of voting platforms be it web or app.<br><br>
+                    Eventually, we have ended up speeding up the vote-counting process while maintaining transparency at
+                    every level voted through our EVMs. We plan to later integrate our solution with present paper trail
+                    solutions. Currently, we have maintained the highest level of security possible in our API calls
+                    from <b>Raspberry Pi</b> by using a token and certificate-based authentication for API calls.
+                </div>
+                <div class="col-md-6 mb-4">
+                    <img src="img/EVM-min.jpeg" style="height: auto; width: 70%;" class="img-fluid z-depth-1-half">
                 </div>
             </div>
         </section>
@@ -274,7 +264,7 @@
 <footer class="page-footer text-center font-small mt-4 wow fadeIn">
     <hr class="my-4">
     <div class="pb-4">
-        <a href="https://www.youtube.com/embed/_PcUHHltb04" target="_blank">
+        <a href="https://youtu.be/oYs3sAa2E6w" target="_blank">
             <i class="fa fa-2x fa-youtube mr-3"></i>
         </a>
         <a href="https://github.com/anshulahuja98/CFD-19-IITJ/" target="_blank">
